Don't add a chip when a facet is selected from dropdown. (#218)
* Don't add a chip when a facet is selected from dropdown.
Only add a facet card to the grid.

* Fix bugs

* Review comment changes

* Review fixes
