# api/data_explorer/models/search_result.py
@@ -15,32 +15,34 @@ class SearchResult(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, name=None, description=None,
-                 elasticsearch_name=None):  # noqa: E501
+    def __init__(self,
+                 display_text=None,
+                 elasticsearch_field_name=None,
+                 facet_value=None):  # noqa: E501
         """SearchResult - a model defined in Swagger
 
-        :param name: The name of this SearchResult.  # noqa: E501
-        :type name: str
-        :param description: The description of this SearchResult.  # noqa: E501
-        :type description: str
-        :param elasticsearch_name: The elasticsearch_name of this SearchResult.  # noqa: E501
-        :type elasticsearch_name: str
+        :param display_text: The display_text of this SearchResult.  # noqa: E501
+        :type display_text: str
+        :param elasticsearch_field_name: The elasticsearch_field_name of this SearchResult.  # noqa: E501
+        :type elasticsearch_field_name: str
+        :param facet_value: The facet_value of this SearchResult.  # noqa: E501
+        :type facet_value: str
         """
         self.swagger_types = {
-            'name': str,
-            'description': str,
-            'elasticsearch_name': str
+            'display_text': str,
+            'elasticsearch_field_name': str,
+            'facet_value': str
         }
 
         self.attribute_map = {
-            'name': 'name',
-            'description': 'description',
-            'elasticsearch_name': 'elasticsearch_name'
+            'display_text': 'display_text',
+            'elasticsearch_field_name': 'elasticsearch_field_name',
+            'facet_value': 'facet_value'
         }
 
-        self._name = name
-        self._description = description
-        self._elasticsearch_name = elasticsearch_name
+        self._display_text = display_text
+        self._elasticsearch_field_name = elasticsearch_field_name
+        self._facet_value = facet_value
 
     @classmethod
     def from_dict(cls, dikt):
@@ -54,70 +56,70 @@ class SearchResult(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def name(self):
-        """Gets the name of this SearchResult.
+    def display_text(self):
+        """Gets the display_text of this SearchResult.
 
-        Field name, for example, \"Gender\".  # noqa: E501
+        The text displayed in the dropdown.  # noqa: E501
 
-        :return: The name of this SearchResult.
+        :return: The display_text of this SearchResult.
         :rtype: str
         """
-        return self._name
+        return self._display_text
 
-    @name.setter
-    def name(self, name):
-        """Sets the name of this SearchResult.
+    @display_text.setter
+    def display_text(self, display_text):
+        """Sets the display_text of this SearchResult.
 
-        Field name, for example, \"Gender\".  # noqa: E501
+        The text displayed in the dropdown.  # noqa: E501
 
-        :param name: The name of this SearchResult.
-        :type name: str
+        :param display_text: The display_text of this SearchResult.
+        :type display_text: str
         """
 
-        self._name = name
+        self._display_text = display_text
 
     @property
-    def description(self):
-        """Gets the description of this SearchResult.
-
-        Optional field description.  # noqa: E501
-
-        :return: The description of this SearchResult.
-        :rtype: str
-        """
-        return self._description
-
-    @description.setter
-    def description(self, description):
-        """Sets the description of this SearchResult.
-
-        Optional field description.  # noqa: E501
-
-        :param description: The description of this SearchResult.
-        :type description: str
-        """
-
-        self._description = description
-
-    @property
-    def elasticsearch_name(self):
-        """Gets the elasticsearch_name of this SearchResult.
+    def elasticsearch_field_name(self):
+        """Gets the elasticsearch_field_name of this SearchResult.
 
         The Elasticsearch field name.  # noqa: E501
 
-        :return: The elasticsearch_name of this SearchResult.
+        :return: The elasticsearch_field_name of this SearchResult.
         :rtype: str
         """
-        return self._elasticsearch_name
+        return self._elasticsearch_field_name
 
-    @elasticsearch_name.setter
-    def elasticsearch_name(self, elasticsearch_name):
-        """Sets the elasticsearch_name of this SearchResult.
+    @elasticsearch_field_name.setter
+    def elasticsearch_field_name(self, elasticsearch_field_name):
+        """Sets the elasticsearch_field_name of this SearchResult.
 
         The Elasticsearch field name.  # noqa: E501
 
-        :param elasticsearch_name: The elasticsearch_name of this SearchResult.
-        :type elasticsearch_name: str
+        :param elasticsearch_field_name: The elasticsearch_field_name of this SearchResult.
+        :type elasticsearch_field_name: str
         """
 
-        self._elasticsearch_name = elasticsearch_name
+        self._elasticsearch_field_name = elasticsearch_field_name
+
+    @property
+    def facet_value(self):
+        """Gets the facet_value of this SearchResult.
+
+        If this search result represents a field, facet_value is the empty string. If this search result represents a field and selected value, facet_value is the selected value.  # noqa: E501
+
+        :return: The facet_value of this SearchResult.
+        :rtype: str
+        """
+        return self._facet_value
+
+    @facet_value.setter
+    def facet_value(self, facet_value):
+        """Sets the facet_value of this SearchResult.
+
+        If this search result represents a field, facet_value is the empty string. If this search result represents a field and selected value, facet_value is the selected value.  # noqa: E501
+
+        :param facet_value: The facet_value of this SearchResult.
+        :type facet_value: str
+        """
+
+        self._facet_value = facet_value
